--- a/web/package.json
+++ b/web/package.json
@@ -23,8 +23,8 @@
     "i18next": "^25.8.13",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.562.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-i18next": "^16.5.4",
     "react-markdown": "^9.0.1",
     "react-pdf": "^10.3.0",
@@ -34,14 +34,13 @@
     "recharts": "^3.7.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^3.4.0",
-    "xlsx": "^0.18.5"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
@@ -50,6 +49,9 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "vite": "^5.0.8"
+    "vite": "^7.3.1"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
